<resources>
    <string name="app_name">Timed Facts</string>
    <string name="speech_prompt">Say the Answer</string>
    <string name="speech_not_supported">Voice Recognition Failure</string>
    <string name="addition">ADD</string>
    <string name="Subtract">SUBTRACT</string>
    <string name="multiplication">MULTIPLY</string>
    <string name="login">LOGIN</string>
    <string name="settings">Settings</string>
    <string name="needsWork15"><![CDATA[\"Needs Work (</=1 of 5)\"]]></string>
    <string name="division">DIVISION</string>
    <string name="divide">DIVIDE</string>
    <string name="enterMessage">Enter Message</string>
    <string name="sendResults">Send Results</string>
    <string name="AccTblMessage">Send Accuracy Tables</string>
    <string name="AllFactsMessage">Send All Math Facts</string>
    <string name="adminLogin">ADMIN LOGIN</string>
    <string name="accountMaintenance">Create Student Account</string>
    <string name="adminSettings">Update Admin Account</string>
    <string name="studentProgress">Student Settings and Progress</string>
    <string name="logout">Log Out</string>
    <string name="dialog_purpose">The app requires permission to write to your phone\'s disk space. Writing to the phone/tablets disk space enables sending that file to the educator\'s email.</string>
    <string name="understood">Sure! Ask me again!</string>
    <string name="cancel">The E-mail function is overrated, permission denied.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purchase_emails">UNLOCK ADDITIONAL EMAILS</string>
    <string name="buyEmail">Unlock Up To 5000 Emails</string>
    <string name="zero">0</string>
    <string name="emails">Available Emails</string>
    <string name="overthirteen">I am eighteen (18) years old or older. (If not ask a parent, guardian or teacher for help)</string>
    <string name="termscondprivacy">I agree to the <a href="https://www.magclan.tech/app-privacy-policy/">privacy policy</a> of this app for myself and those under my care who will use this app. You cannot use this app without agreeing to these policies.</string>
    <string name="i_have">You Have:</string>
    <string name="ads_approval_statement">Keep this email(s) up-to-date on tools and info from Mag Clan Technology.</string>
    <string name="admin_email_purpose">Email is to allow magclan.tech to contact the administrator of this app as per the requirements of our privacy policy.</string>
    <string name="admin_name">This is the login ID for the administrator. Make sure you remember it and your pin because MagClan Technology does not keep track of it nor can we change it.</string>
    <string name="naming_advice">The student will use this name as their login ID each time they use the app and it will appear in the emails you receive from them.</string>
    <string name="email_info">Email address(es) entered here will receive updates from this student. To send to multiple email addresses, addresses shoud be seperated by commas.</string>
</resources>