<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="false"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="Admin Menu"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/removeCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".125"
        android:background="@color/black"
        android:text="@string/accountMaintenance"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="54sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/AdminSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".125"
        android:background="@color/black"
        android:text="@string/adminSettings"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="54sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/studentProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".125"
        android:background="@color/black"
        android:text="@string/studentProgress"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="54sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".125"
        android:background="@color/black"
        android:text="Send Feedback"
        android:textAlignment="center"
        android:textColor="@color/lightblue"
        android:textSize="54sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/purchaseEmails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".125"
        android:background="@color/black"
        android:text="@string/purchase_emails"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="48sp"
        android:textStyle="bold" />


</LinearLayout>