<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <LinearLayout
        android:id="@+id/have_emails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buy_button"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_have"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/num_emails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="36sp"
            android:textStyle="bold"
            android:text="@string/zero" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emails"
            android:textSize="36sp"
            android:textStyle="bold"  />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher" />

        </LinearLayout>
    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyEmail"
        android:onClick="onUnlockEmail5000Click"
        android:textSize="36sp"
        android:textStyle="bold"  />
    </LinearLayout>


    <CheckBox
        android:id="@+id/agreeToTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I agree to the magclan.math terms of service shown below."
        android:textSize="18sp"
        android:textStyle="bold"  />


    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/termsAndCond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="11sp"
        android:paddingHorizontal="45dp"
        android:scrollbars="vertical"/>
    </ScrollView>
</LinearLayout>
