<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Admin ID"
        android:textColor="@color/blue"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adminID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="(i.e. Clark Kent)"
        android:inputType="textPersonName"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Associated Email"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adminEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Email Address"
        android:inputType="textEmailAddress"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_email_purpose"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New PIN Number"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Create PIN"
        android:inputType="numberPassword"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm PIN Number"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPinValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Confirm PIN"
        android:inputType="numberPassword"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8sp" />

    <CheckBox
        android:id="@+id/overthirteen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overthirteen"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8sp" />

    <CheckBox
        android:id="@+id/termsConditionsPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termscondprivacy"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8sp" />

    <CheckBox
        android:id="@+id/ads_approval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/ads_approval_statement"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8sp" />

    <Button
        android:id="@+id/createAdmin"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_weight="0.15"
        android:background="@android:color/holo_blue_dark"
        android:text="Create Admin Account"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold" />

</LinearLayout>
</ScrollView>