<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create New Student Account"
        android:textColor="@color/blue"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter New Name"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/namingadvice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/naming_advice"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Educator's Email"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Email Address"
        android:inputType="textEmailAddress"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/namingadvice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_info"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New PIN Number"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Create PIN"
        android:inputType="numberPassword"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm PIN Number"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPinValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Confirm PIN"
        android:inputType="numberPassword"
        android:textSize="36sp" />

    <CheckBox
        android:id="@+id/ads_approval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/ads_approval_statement"
        android:textSize="22sp" />

    <Button
        android:id="@+id/createLogin"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_weight="0.15"
        android:background="@android:color/holo_blue_dark"
        android:text="ENTER"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold" />

</LinearLayout>
</ScrollView>